# cagebreak

./: .clang-format  .gitignore  Bugs.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Dockerfile  FAQ.md  Hashes.md  LICENSE  README.md  SECURITY.md  cagebreak.c  config.h.in  doxygen_config  doxygen_config.in  idle_inhibit_v1.c  idle_inhibit_v1.h  input.h  input_manager.c  input_manager.h  ipc_server.c  ipc_server.h  keybinding.c  keybinding.h  layer_shell.c  layer_shell.h  libinput.c  manuals.md  meson.build  meson_options.txt  message.c  message.h  output.c  output.h  pango.c  pango.h  parse.c  parse.h  render.c  (+15 more)
.github/workflows/: Dockerfile  ci.yml
docs/: dev-FAQ.md  pull_request_template.md
example_scripts/: cb_script_header.sh  focus_follows_cursor.sh  screenshot_script  show_workspace_views  show_workspace_views.sh
examples/: config
fuzz/: execl_override.c  fuzz-lib.c  fuzz-lib.h  fuzz-parse.c  meson.build
keys/: cagebreak@project-repo.co.pub  cagebreak@project-repo.co.pub-legacy-2  cagebreak@project-repo.co.pub-legacy-3  cagebreak@project-repo.co.pub-legacy-4  cagebreak_signing_key_1.asc  cagebreak_signing_key_11@project-repo.co.pub  cagebreak_signing_key_12@project-repo.co.pub  cagebreak_signing_key_13@project-repo.co.pub  cagebreak_signing_key_14@project-repo.co.pub  cagebreak_signing_key_1@cagebreak.pub  cagebreak_signing_key_2.asc  cagebreak_signing_key_3@project-repo.co.pub  cagebreak_signing_key_4@project-repo.co.pub  cagebreak_signing_key_5@project-repo.co  cagebreak_signing_key_6@project-repo.co  cagebreak_signing_key_7@project-repo.co.pub  cagebreak_signing_key_8@project-repo.co.pub  cagebreak_signing_key_9@project-repo.co.pub
man/: cagebreak-config.5.md  cagebreak-socket.7.md  cagebreak.1.md
release-non-auto-checks/: Bugs.md  FAQ.md  WLR_XDG_VERSION  archwiki  changelog-major-minor  internal-wiki  release-note  reproducibility-checked  security-to-man-page-info-transfer
scripts/: adjust-epoch  create-release-artefacts  create-signatures  fuzz  git-tag  install-development-environment  output-hashes  set-version  test
signatures/: 1.0.6.sig  1.3.0.sig  1.3.1.sig  1.3.2.sig  1.4.1.sig  1.4.3.sig  1.4.4.sig  1.5.0.sig  1.5.1.sig  1.7.0.sig  1.7.1-cagebreak-config.5.sig  1.7.1.sig  1.7.2-cagebreak-config.5.sig  1.7.2-cagebreak.1.sig  1.7.3.sig  1.7.4-cagebreak.1.sig  1.8.0-cagebreak-config.5.sig  1.8.0-cagebreak.1.sig  1.8.0.sig  1.8.2.sig  1.8.3-cagebreak-config.5.sig  1.8.3-cagebreak.1.sig  1.8.3.sig  1.9.0-cagebreak-config.5.sig  1.9.0.sig  1.9.1-cagebreak.sig  2.0.0-cagebreak-config.5.sig  2.0.1-cagebreak-socket.7.sig  2.0.1-cagebreak.1.sig  2.0.1-cagebreak.sig  2.1.0-cagebreak-config.5.sig  2.1.0-cagebreak-socket.7.sig  2.1.0-cagebreak.1.sig  2.1.0-cagebreak.sig  2.1.1-cagebreak-config.5.sig  2.1.1-cagebreak-socket.7.sig  2.1.1-cagebreak.1.sig  2.1.2-cagebreak-config.5.sig  2.1.2-cagebreak-socket.7.sig  2.1.2-cagebreak.1.sig  (+27 more)
test/: arguments  build-w-o-warnings  build-w-o-xwayland  check-artefacts  clang-format  copyright-license  environment-variables  git-tag  gpg-signatures  gpg-validity  hashes-md  illegal-strings  man-pages  non-auto-tests  scan-build  script-executability  script-header  shellcheck  versions
test/testing-configurations/: -c-config  cb_script_header.sh  config  env-var-config  my-scan-build
